crates/solite-fmt/src/snapshots/solite_fmt__tests__create_index_if_not_exists.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create index if not exists idx_t_a on t(a)

-- Output:
create index if not exists idx_t_a on t(a);
