crates/solite-fmt/src/snapshots/solite_fmt__tests__create_index_multiple_columns.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create index idx_t_ab on t(a, b desc)

-- Output:
create index idx_t_ab on t(a, b desc);
