crates/solite-fmt/src/snapshots/solite_fmt__tests__create_index_multiple_with_order.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create index idx_composite on t(a asc, b desc, c)

-- Output:
create index idx_composite on t(a asc, b desc, c);
