crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_autoincrement.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (id integer primary key autoincrement, name text)

-- Output:
create table t(
  id integer primary key autoincrement,
  name text
);
