crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_collate.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (name text collate nocase, description text collate binary)

-- Output:
create table t(
  name text collate nocase,
  description text collate binary
);
