crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_complex_defaults.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (created_at integer default (strftime('%s', 'now')), updated_at text default (datetime('now')))

-- Output:
create table t(
  created_at integer default (strftime('%s', 'now')),
  updated_at text default (datetime('now'))
);
