crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_foreign_key_actions.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table orders (id integer primary key, user_id integer references users(id) on delete cascade on update set null)

-- Output:
create table orders(
  id integer primary key,
  user_id integer references users(id) on delete cascade on update set null
);
