crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_if_not_exists.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table if not exists t (a integer)

-- Output:
create table if not exists t(
  a integer
);
